fixed spacing

--- a/src/main/webapp/compass-hidden/_common.scss
+++ b/src/main/webapp/compass-hidden/_common.scss
@@ -14,7 +14,7 @@ ul {
 }
 
 %create-form {
-  margin-top: 30px;
+  margin-top: 20px;
 
   @extend %create-element;
 
@@ -51,7 +51,7 @@ ul {
 }
 
 %list-element {
-  margin-top: 45px;
+  margin-top: 20px;
   
   button {
     @extend .btn;
